displaying 20 random words in the index page.

--- a/app/views/words/show.html.erb
+++ b/app/views/words/show.html.erb
@@ -15,5 +15,12 @@
   <%= @word.part_of_speach %>
 </p>
 
+
+<p>
+  <strong>Sample Sentence</strong>
+  <%= @word.sample_sentence %>
+</p>
+
+
 <%= link_to 'Edit', edit_word_path(@word) %> |
 <%= link_to 'Back', words_path %>
