--- a/app/views/words/_form.html.erb
+++ b/app/views/words/_form.html.erb
@@ -1,6 +1,6 @@
 <%= form_for(@word) do |f| %>
-  <% if @word.errors.any? %>
-    <div id="error_explanation">
+    <% if @word.errors.any? %>
+        <div id="error_explanation">
       <h2><%= pluralize(@word.errors.count, "error") %> prohibited this word from being saved:</h2>
 
       <ul>
@@ -9,21 +9,31 @@
       <% end %>
       </ul>
     </div>
-  <% end %>
+    <% end %>
 
-  <div class="field">
-    <%= f.label :word %><br>
-    <%= f.text_field :word %>
+    <div class="field">
+    <%= f.label :word %>
+      <br>
+      <%= f.text_field :word %>
   </div>
-  <div class="field">
-    <%= f.label :meaning %><br>
-    <%= f.text_field :meaning %>
+    <div class="field">
+    <%= f.label :meaning %>
+      <br>
+      <%= f.text_field :meaning %>
   </div>
-  <div class="field">
-    <%= f.label :part_of_speach %><br>
-    <%= f.text_field :part_of_speach %>
+    <div class="field">
+    <%= f.label :part_of_speach %>
+      <br>
+      <%= f.text_field :part_of_speach %>
   </div>
-  <div class="actions">
+    <div class="field">
+    <%= f.label :sample_sentence %>
+      <br>
+      <%= f.text_field :sample_sentence %>
+  </div>
+
+
+    <div class="actions">
     <%= f.submit %>
   </div>
 <% end %>
