--- a/app/views/words/index.html.erb
+++ b/app/views/words/index.html.erb
@@ -6,6 +6,7 @@
       <th>Word</th>
       <th>Meaning</th>
       <th>Part of speach</th>
+      <th>Sample Sentence</th>
       <th></th>
       <th></th>
       <th></th>
@@ -18,6 +19,7 @@
         <td><%= word.word %></td>
         <td><%= word.meaning %></td>
         <td><%= word.part_of_speach %></td>
+        <td><%= word.sample_sentence %></td>
         <td><%= link_to 'Show', word %></td>
         <td><%= link_to 'Edit', edit_word_path(word) %></td>
         <td><%= link_to 'Destroy', word, method: :delete, data: { confirm: 'Are you sure?' } %></td>
