added wordnik gem. got it working in rails console.

--- a/app/views/words/index.html.erb
+++ b/app/views/words/index.html.erb
@@ -30,4 +30,13 @@
 
 <br>
 
+
+<!--<% meaning = Wordnik.word.get_definitions("hypnotize", source_dictionaries: "wiktionary") %>-->
+
+
+<!--<h4 style="text-decoration: underline">wiktionary</h4>-->
+<!--<%= meaning.first["text"] %>-->
+
+
+
 <%= link_to 'New Word', new_word_path %>
